Fix seekbar too low

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -291,7 +291,7 @@ footer .active svg {
   right: 100%;
   height: 4px;
   border-radius: 10px;
-  background: rgba(99, 116, 134, 0.3);
+  background: #ABABAB;
   transition: transform 0.5s ease-in;
 }
 
@@ -347,7 +347,7 @@ footer .active svg {
   }
 
   #player-progress {
-    top: 28px;
+    top: 20px;
     width: 100%;
     background: none;
     left: 0;
